# news_digests

./: .env.example  .gitignore  PROJECT_PROMPTS.md  README.md  pyproject.toml  sources.yaml.example
docs/superpowers/plans/: 2026-05-22-news-digest-implementation.md
docs/superpowers/specs/: 2026-05-22-news-digest-design.md
news_digest/: __main__.py  cli.py  config.py  models.py  pipeline.py  renderer.py  rss.py  topics.py
news_digest/summarizers/: __init__.py  base.py  deepseek.py
tests/: test_cli.py  test_config.py  test_deepseek.py  test_pipeline.py  test_renderer.py  test_rss.py  test_topics.py
tests/fixtures/: sample_feed.xml
